--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "docs:build": "vuepress build docs",
     "patch-chromedriver": "node scripts/patchChromedriver.js"
   },
-  // "gitHooks": {
-  //   "pre-commit": "lint-staged",
-  //   "commit-msg": "node scripts/verifyCommitMsg.js"
-  // },
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "commit-msg": "node scripts/verifyCommitMsg.js"
+  },
   "jest": {
     "testEnvironment": "node",
     "setupFiles": [
